[gd_scene load_steps=14 format=2]

[ext_resource path="res://Elementos/Textuais/ComicSansMS/comic.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Elementos/Fases/Delegacia/DelegaciaFase3/Cidade sem os personagens.png" type="Texture" id=2]
[ext_resource path="res://Cenas/Objetos/CaixaDialogo.tscn" type="PackedScene" id=3]
[ext_resource path="res://Cenas/Objetos/ControleDeslizante.tscn" type="PackedScene" id=4]
[ext_resource path="res://Cenas/Objetos/Painel.tscn" type="PackedScene" id=5]
[ext_resource path="res://Codigos/Cenas/TelaPrincipalDelegaciaNivel3.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
resource_local_to_scene = true
size = 34
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
resource_local_to_scene = true
size = 38
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
resource_local_to_scene = true
size = 34
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
resource_local_to_scene = true
size = 26
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=5]
resource_local_to_scene = true
bg_color = Color( 0.580392, 0.94902, 0.941176, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id=6]
resource_local_to_scene = true
bg_color = Color( 0.580392, 0.94902, 0.941176, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0, 0, 0, 0 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id=7]
resource_local_to_scene = true
bg_color = Color( 0.580392, 0.94902, 0.941176, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.8, 0.8, 0.8, 0 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[node name="TelaDelegaciaFase3" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cidade" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1920.0
margin_top = -1080.0
margin_right = 1920.0
margin_bottom = 1080.0
rect_scale = Vector2( 0.3, 0.3 )
rect_pivot_offset = Vector2( 1920, 1080 )
texture = ExtResource( 2 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Procurados" type="Node2D" parent="Cidade"]
position = Vector2( 1920, 1080 )

[node name="Procurado1" type="Node2D" parent="Cidade/Procurados"]

[node name="Local1" type="Position2D" parent="Cidade/Procurados/Procurado1"]
position = Vector2( 953.517, -598.597 )

[node name="Local2" type="Position2D" parent="Cidade/Procurados/Procurado1"]
position = Vector2( 733.907, -470.925 )

[node name="Local3" type="Position2D" parent="Cidade/Procurados/Procurado1"]
position = Vector2( -77.6824, -921.524 )

[node name="Local4" type="Position2D" parent="Cidade/Procurados/Procurado1"]
position = Vector2( 1187.52, -564.651 )

[node name="Local5" type="Position2D" parent="Cidade/Procurados/Procurado1"]
position = Vector2( 669.227, -554.452 )

[node name="Procurado2" type="Node2D" parent="Cidade/Procurados"]

[node name="Local1" type="Position2D" parent="Cidade/Procurados/Procurado2"]
position = Vector2( 928.312, 77.682 )

[node name="Local2" type="Position2D" parent="Cidade/Procurados/Procurado2"]
position = Vector2( 596.088, 465.931 )

[node name="Local3" type="Position2D" parent="Cidade/Procurados/Procurado2"]
position = Vector2( 819.141, 362.046 )

[node name="Local4" type="Position2D" parent="Cidade/Procurados/Procurado2"]
position = Vector2( 1324.49, 276.866 )

[node name="Local5" type="Position2D" parent="Cidade/Procurados/Procurado2"]
position = Vector2( 1055.78, 501.494 )

[node name="Procurado3" type="Node2D" parent="Cidade/Procurados"]

[node name="Local1" type="Position2D" parent="Cidade/Procurados/Procurado3"]
position = Vector2( 518.893, -32.0327 )

[node name="Local2" type="Position2D" parent="Cidade/Procurados/Procurado3"]
position = Vector2( 405.19, -30.4387 )

[node name="Local3" type="Position2D" parent="Cidade/Procurados/Procurado3"]
position = Vector2( 893.923, -224.388 )

[node name="Local4" type="Position2D" parent="Cidade/Procurados/Procurado3"]
position = Vector2( 753.511, -103.584 )

[node name="Local5" type="Position2D" parent="Cidade/Procurados/Procurado3"]
position = Vector2( 630.986, -129.383 )

[node name="Procurado4" type="Node2D" parent="Cidade/Procurados"]

[node name="Local1" type="Position2D" parent="Cidade/Procurados/Procurado4"]
position = Vector2( -1121.75, 787.042 )

[node name="Local2" type="Position2D" parent="Cidade/Procurados/Procurado4"]
position = Vector2( 1502.56, 283.637 )

[node name="Local3" type="Position2D" parent="Cidade/Procurados/Procurado4"]
position = Vector2( -1452.85, -349.529 )

[node name="Local4" type="Position2D" parent="Cidade/Procurados/Procurado4"]
position = Vector2( -1490.24, -51.0757 )

[node name="Local5" type="Position2D" parent="Cidade/Procurados/Procurado4"]
position = Vector2( -1371.29, -870.248 )

[node name="Procurado5" type="Node2D" parent="Cidade/Procurados"]

[node name="Local1" type="Position2D" parent="Cidade/Procurados/Procurado5"]
position = Vector2( -477.336, 86.2014 )

[node name="Local2" type="Position2D" parent="Cidade/Procurados/Procurado5"]
position = Vector2( -348.009, -311.757 )

[node name="Local3" type="Position2D" parent="Cidade/Procurados/Procurado5"]
position = Vector2( -222.51, 26.9084 )

[node name="Local4" type="Position2D" parent="Cidade/Procurados/Procurado5"]
position = Vector2( 170.711, -72.1057 )

[node name="Local5" type="Position2D" parent="Cidade/Procurados/Procurado5"]
position = Vector2( 147.051, 363.339 )

[node name="Populacao" type="Node2D" parent="Cidade"]
position = Vector2( 1920, 1080 )

[node name="Pessoa1" type="Node2D" parent="Cidade/Populacao"]

[node name="Local1" type="Position2D" parent="Cidade/Populacao/Pessoa1"]
position = Vector2( 1686.39, 386.988 )

[node name="Local2" type="Position2D" parent="Cidade/Populacao/Pessoa1"]
position = Vector2( 1661.22, -207.652 )

[node name="Local3" type="Position2D" parent="Cidade/Populacao/Pessoa1"]
position = Vector2( -902.973, -349.233 )

[node name="Local4" type="Position2D" parent="Cidade/Populacao/Pessoa1"]
position = Vector2( -1110.63, 138.435 )

[node name="Local5" type="Position2D" parent="Cidade/Populacao/Pessoa1"]
position = Vector2( -478.77, -25.1984 )

[node name="Local6" type="Position2D" parent="Cidade/Populacao/Pessoa1"]
position = Vector2( 1404.81, 222.586 )

[node name="Local7" type="Position2D" parent="Cidade/Populacao/Pessoa1"]
position = Vector2( 417.874, 403.175 )

[node name="Local8" type="Position2D" parent="Cidade/Populacao/Pessoa1"]
position = Vector2( -634.16, 577.464 )

[node name="Pessoa2" type="Node2D" parent="Cidade/Populacao"]

[node name="Local1" type="Position2D" parent="Cidade/Populacao/Pessoa2"]
position = Vector2( 388.758, 595.492 )

[node name="Local2" type="Position2D" parent="Cidade/Populacao/Pessoa2"]
position = Vector2( -1706.46, 47.6221 )

[node name="Local3" type="Position2D" parent="Cidade/Populacao/Pessoa2"]
position = Vector2( -775.829, -284.219 )

[node name="Local4" type="Position2D" parent="Cidade/Populacao/Pessoa2"]
position = Vector2( 1280.5, -232.819 )

[node name="Local5" type="Position2D" parent="Cidade/Populacao/Pessoa2"]
position = Vector2( 944.504, 637.606 )

[node name="Local6" type="Position2D" parent="Cidade/Populacao/Pessoa2"]
position = Vector2( -944.503, 68.7874 )

[node name="Local7" type="Position2D" parent="Cidade/Populacao/Pessoa2"]
position = Vector2( 865.134, 388.913 )

[node name="Local8" type="Position2D" parent="Cidade/Populacao/Pessoa2"]
position = Vector2( -455.055, 513.26 )

[node name="Pessoa3" type="Node2D" parent="Cidade/Populacao"]

[node name="Local1" type="Position2D" parent="Cidade/Populacao/Pessoa3"]
position = Vector2( 65.3325, -11.8787 )

[node name="Local2" type="Position2D" parent="Cidade/Populacao/Pessoa3"]
position = Vector2( -786.961, -932.474 )

[node name="Local3" type="Position2D" parent="Cidade/Populacao/Pessoa3"]
position = Vector2( 1098.78, 279.148 )

[node name="Local4" type="Position2D" parent="Cidade/Populacao/Pessoa3"]
position = Vector2( -389.026, -552.357 )

[node name="Local5" type="Position2D" parent="Cidade/Populacao/Pessoa3"]
position = Vector2( -653.326, -20.7877 )

[node name="Local6" type="Position2D" parent="Cidade/Populacao/Pessoa3"]
position = Vector2( 1128.47, -210.846 )

[node name="Local7" type="Position2D" parent="Cidade/Populacao/Pessoa3"]
position = Vector2( -1410.59, 77.2112 )

[node name="Local8" type="Position2D" parent="Cidade/Populacao/Pessoa3"]
position = Vector2( -279.148, 656.295 )

[node name="Pessoa4" type="Node2D" parent="Cidade/Populacao"]

[node name="Local1" type="Position2D" parent="Cidade/Populacao/Pessoa4"]
position = Vector2( -977.019, 305.875 )

[node name="Local2" type="Position2D" parent="Cidade/Populacao/Pessoa4"]
position = Vector2( 659.265, 255.391 )

[node name="Local3" type="Position2D" parent="Cidade/Populacao/Pessoa4"]
position = Vector2( -1698.65, -225.694 )

[node name="Local4" type="Position2D" parent="Cidade/Populacao/Pessoa4"]
position = Vector2( -873.081, 299.936 )

[node name="Local5" type="Position2D" parent="Cidade/Populacao/Pessoa4"]
position = Vector2( 1817.43, -282.118 )

[node name="Local6" type="Position2D" parent="Cidade/Populacao/Pessoa4"]
position = Vector2( -305.875, 418.722 )

[node name="Local7" type="Position2D" parent="Cidade/Populacao/Pessoa4"]
position = Vector2( -513.752, -460.298 )

[node name="Local8" type="Position2D" parent="Cidade/Populacao/Pessoa4"]
position = Vector2( -243.512, -288.057 )

[node name="Pessoa5" type="Node2D" parent="Cidade/Populacao"]

[node name="Local1" type="Position2D" parent="Cidade/Populacao/Pessoa5"]

[node name="Local2" type="Position2D" parent="Cidade/Populacao/Pessoa5"]
position = Vector2( -160.362, -305.875 )

[node name="Local3" type="Position2D" parent="Cidade/Populacao/Pessoa5"]
position = Vector2( -1241.32, -391.995 )

[node name="Local4" type="Position2D" parent="Cidade/Populacao/Pessoa5"]
position = Vector2( -1799.62, 629.568 )

[node name="Local5" type="Position2D" parent="Cidade/Populacao/Pessoa5"]
position = Vector2( -626.599, -415.753 )

[node name="Local6" type="Position2D" parent="Cidade/Populacao/Pessoa5"]
position = Vector2( -1597.68, 74.2415 )

[node name="Local7" type="Position2D" parent="Cidade/Populacao/Pessoa5"]
position = Vector2( 1443.26, -187.089 )

[node name="Local8" type="Position2D" parent="Cidade/Populacao/Pessoa5"]
position = Vector2( -216.785, 454.358 )

[node name="Pessoa6" type="Node2D" parent="Cidade/Populacao"]

[node name="Local1" type="Position2D" parent="Cidade/Populacao/Pessoa6"]
position = Vector2( 712.719, 305.875 )

[node name="Local2" type="Position2D" parent="Cidade/Populacao/Pessoa6"]
position = Vector2( 1844.16, -77.2112 )

[node name="Local3" type="Position2D" parent="Cidade/Populacao/Pessoa6"]
position = Vector2( -1752.1, -564.236 )

[node name="Local4" type="Position2D" parent="Cidade/Populacao/Pessoa6"]
position = Vector2( -445.449, -368.238 )

[node name="Local5" type="Position2D" parent="Cidade/Populacao/Pessoa6"]
position = Vector2( 1000.78, -225.694 )

[node name="Local6" type="Position2D" parent="Cidade/Populacao/Pessoa6"]
position = Vector2( -789.93, 421.692 )

[node name="Local7" type="Position2D" parent="Cidade/Populacao/Pessoa6"]
position = Vector2( 1811.49, 522.661 )

[node name="Local8" type="Position2D" parent="Cidade/Populacao/Pessoa6"]
position = Vector2( 44.5449, 409.813 )

[node name="Pessoa7" type="Node2D" parent="Cidade/Populacao"]

[node name="Local1" type="Position2D" parent="Cidade/Populacao/Pessoa7"]
position = Vector2( -380.117, 62.3629 )

[node name="Local2" type="Position2D" parent="Cidade/Populacao/Pessoa7"]
position = Vector2( -757.264, 65.3325 )

[node name="Local3" type="Position2D" parent="Cidade/Populacao/Pessoa7"]
position = Vector2( 1864.95, 71.2719 )

[node name="Local4" type="Position2D" parent="Cidade/Populacao/Pessoa7"]
position = Vector2( -1838.22, 160.362 )

[node name="Local5" type="Position2D" parent="Cidade/Populacao/Pessoa7"]
position = Vector2( 26.7268, 576.115 )

[node name="Local6" type="Position2D" parent="Cidade/Populacao/Pessoa7"]
position = Vector2( 1199.74, 207.876 )

[node name="Local7" type="Position2D" parent="Cidade/Populacao/Pessoa7"]
position = Vector2( -1297.74, 100.969 )

[node name="Local8" type="Position2D" parent="Cidade/Populacao/Pessoa7"]
position = Vector2( 267.27, 389.026 )

[node name="Dialogo" parent="." instance=ExtResource( 3 )]

[node name="Texto" parent="Dialogo/Margem/Vertical/BotaoVoz/Vertical" index="1"]
custom_fonts/font = SubResource( 1 )

[node name="Texto" parent="Dialogo/Margem/Vertical/Caixa/Margem" index="0"]
custom_fonts/normal_font = SubResource( 2 )
CarregarTexto = " "

[node name="BotaoComando" parent="Dialogo/Margem/Vertical" index="2"]
self_modulate = Color( 1, 1, 1, 1 )
disabled = true

[node name="Icone" parent="Dialogo/Margem/Vertical/BotaoComando/Vertical" index="0"]
self_modulate = Color( 1, 1, 1, 1 )
margin_top = 66.0
margin_right = 117.0
margin_bottom = 126.0
flip_h = false

[node name="Texto" parent="Dialogo/Margem/Vertical/BotaoComando/Vertical" index="1"]
visible = false
margin_right = 188.0
custom_fonts/font = SubResource( 3 )
text = "BotaoVoltar"

[node name="Painel" parent="." instance=ExtResource( 5 )]

[node name="Pontuacao" parent="Painel/Elementos" index="0"]
visible = false

[node name="Texto" parent="Painel/Elementos/Pontuacao" index="0"]
custom_fonts/font = SubResource( 4 )

[node name="Numero" parent="Painel/Elementos/Pontuacao" index="1"]
custom_fonts/font = SubResource( 4 )

[node name="Separador" parent="Painel/Elementos" index="1"]
visible = false
margin_left = 0.0
margin_right = 4.0

[node name="Tempo" parent="Painel/Elementos" index="2"]
margin_left = 0.0

[node name="Texto" parent="Painel/Elementos/Tempo" index="0"]
margin_right = 212.0
custom_fonts/font = SubResource( 4 )

[node name="Numero" parent="Painel/Elementos/Tempo" index="1"]
margin_right = 212.0
custom_fonts/font = SubResource( 4 )

[node name="ControleDeslizante" parent="." instance=ExtResource( 4 )]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -10.0
margin_top = -220.0
margin_right = 340.0
margin_bottom = -125.0
rect_min_size = Vector2( 350, 95 )
rect_rotation = 90.0
custom_styles/slider = SubResource( 5 )
custom_styles/grabber_area_highlight = SubResource( 6 )
custom_styles/grabber_area = SubResource( 7 )
min_value = 0.3
max_value = 1.0
step = 0.01
value = 0.3

[connection signal="gui_input" from="Cidade" to="." method="_arrastarCidade"]
[connection signal="pressed" from="Dialogo/Margem/Vertical/BotaoComando" to="." method="_BotaoProximoProcurado"]
[connection signal="value_changed" from="ControleDeslizante" to="." method="_escalaCidade"]

[editable path="Dialogo"]
[editable path="Dialogo/Margem/Vertical/BotaoVoz"]
[editable path="Dialogo/Margem/Vertical/BotaoComando"]
[editable path="Painel"]
